fixed error of names not showing up on messages

--- a/src/Chat.css
+++ b/src/Chat.css
@@ -48,7 +48,7 @@
     margin-bottom: 30px;
 }
 
-.chat__receiver {
+.chat__sender{
     margin-left: auto;
     background-color: #dcf8c6;
 }
